force-app/main/default/objects/Course__c/fields/LMS_Other__c.field-meta.xml
<CustomField>
    <fullName>LMS_Other__c</fullName>
    <label>LMS Other</label>
    <length>255</length>
    <type>Text</type>
</CustomField>