force-app/main/default/objects/Course__c/validationRules/Other_LMS_Validation_Rule.validationRule-meta.xml
<ValidationRule>
    <fullName>Other_LMS_Validation_Rule</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL( LMS__c , &apos;Other&apos;) &amp;&amp; ISBLANK( LMS_Other__c)</errorConditionFormula>
    <errorDisplayField>LMS_Other__c</errorDisplayField>
    <errorMessage>Please specify a value for &apos;Other LMS&apos;</errorMessage>
</ValidationRule>